[FCT] Improve ambiance browser user experience, add support of entry selection and double click to display the ambiance, and it now displays the entries using flex-box

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -12,7 +12,9 @@ $resize-handle-normal-color: transparent;
 $resize-handle-active-color: #9da2a8;
 
 // Ambiances
-$ambiance-entry-background-color: #131a2c;
+$ambiance-entry-background-color: #131a2c00;
+$ambiance-entry-hover-background-color: #47526c;
+$ambiance-entry-selected-background-color: #415a93;
 
 // Debugging
 $debug-text-color: #ffffff;
