--- a/app/components/components.module.scss
+++ b/app/components/components.module.scss
@@ -68,21 +68,46 @@ main.mainLayout {
 	height: 100%;
 	overflow-y: scroll;
 
-	.ambianceEntry {
-		width: 100%;
-		height: 8em;
-		box-sizing: border-box;
+	.browserLayout {
+		padding: 0;
 
-		background-color: $ambiance-entry-background-color;
+		display: flex;
+		direction: ltr;
+		flex-wrap: wrap;
+		gap: 0.2em;
 
-		&.selected {
+		li {
+			list-style-type: none;
 		}
 	}
 
-	.thumbnail {
-		width: 100%;
-		height: 100%;
-		object-fit: contain;
+	.ambianceEntry {
+		width: 10em;
+		height: 10em;
+		padding: 0.5em;
+
+		background-color: $ambiance-entry-background-color;
+
+		text-align: center;
+
+		display: grid;
+		grid-template-rows: 1fr auto;
+		justify-content: center;
+		gap: 0.2em;
+
+		&:not(.selected):hover {
+			background-color: $ambiance-entry-hover-background-color;
+		}
+
+		&.selected {
+			background-color: $ambiance-entry-selected-background-color;
+		}
+
+		.thumbnail {
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+		}
 	}
 }
 
