--- a/app/globals.scss
+++ b/app/globals.scss
@@ -11,6 +11,9 @@ $panel-background-color: #2c3c65;
 $resize-handle-normal-color: transparent;
 $resize-handle-active-color: #9da2a8;
 
+// Viewport
+$fullscreen-button-color: #2a2a2a;
+
 // Ambiances
 $ambiance-entry-background-color: #131a2c00;
 $ambiance-entry-hover-background-color: #47526c;
