--- a/app/components/components.module.scss
+++ b/app/components/components.module.scss
@@ -68,7 +68,13 @@ main.mainLayout {
 	height: 100%;
 	overflow-y: scroll;
 
-	.browserLayout {
+	.fileUploader {
+		.fileUploaderButton {
+			// TODO : make input styling
+		}
+	}
+
+	.ambianceBrowserLayout {
 		padding: 0;
 
 		display: flex;
@@ -183,3 +189,14 @@ main.mainLayout {
 		}
 	}
 }
+
+// Disable browser's default button style :
+/*
+background: none;
+color: inherit;
+border: none;
+padding: 0;
+font: inherit;
+cursor: pointer;
+outline: inherit;
+*/
