[FIX] Viewport now occupies 100% of its parent's height, by changing its display to block.

--- a/app/components/components.module.scss
+++ b/app/components/components.module.scss
@@ -147,9 +147,9 @@ main.mainLayout {
 	}
 
 	.viewportImage {
+		display: block;
 		width: 100%;
-		// TODO : wtf
-		height: 99.5%;
+		height: 100%;
 		object-fit: contain;
 	}
 
