[FIX] Fixed ambiance browser style flex layout

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -18,6 +18,7 @@ $fullscreen-button-color: #2a2a2a;
 $ambiance-entry-background-color: #131a2c00;
 $ambiance-entry-hover-background-color: #47526c;
 $ambiance-entry-selected-background-color: #415a93;
+$ambiance-entry-size: 150px;
 $file-uploader-border-color: #6e6e6e;
 $file-uploader-background-color: #2c3c65;
 $file-uploader-hover-background-color: #47526c;
