--- a/app/components/components.module.scss
+++ b/app/components/components.module.scss
@@ -129,9 +129,8 @@ main.mainLayout {
 	}
 
 	.ambianceEntry {
-		width: 10em;
-		height: 10em;
 		padding: 0.5em;
+		box-sizing: border-box;
 
 		background-color: $ambiance-entry-background-color;
 
@@ -140,7 +139,7 @@ main.mainLayout {
 		display: grid;
 		grid-template-rows: 1fr auto;
 		justify-content: center;
-		gap: 0.2em;
+		gap: 0.4em;
 
 		&:not(.selected):hover {
 			background-color: $ambiance-entry-hover-background-color;
@@ -150,10 +149,27 @@ main.mainLayout {
 			background-color: $ambiance-entry-selected-background-color;
 		}
 
-		.thumbnail {
-			width: 100%;
-			height: 100%;
-			object-fit: contain;
+		.thumbnailContainer {
+			width: $ambiance-entry-size;
+			height: $ambiance-entry-size;
+
+			display: flex;
+			justify-content: center;
+			align-items: end;
+
+			.thumbnail {
+				max-width: 100%;
+				max-height: 100%;
+				object-fit: contain;
+			}
+		}
+
+		.ambianceEntryName {
+			width: $ambiance-entry-size;
+
+			overflow: hidden;
+			text-overflow: ellipsis;
+			overflow-wrap: break-word;
 		}
 	}
 }
